Set rpath to local devroot

--- a/super/CMakeLists.txt
+++ b/super/CMakeLists.txt
@@ -8,6 +8,10 @@ set(CMAKE_ARGS
         -DCMAKE_BUILD_TYPE=Debug
         -DCMAKE_PREFIX_PATH=${DEVROOT}
         -DCMAKE_INSTALL_PREFIX=${DEVROOT}
+	-DCMAKE_SKIP_BUILD_RPATH:BOOL=OFF
+        -DCMAKE_SKIP_INSTALL_RPATH:BOOL=OFF
+        -DCMAKE_BUILD_WITH_INSTALL_RPATH:BOOL=ON
+        -DCMAKE_INSTALL_RPATH:STRING=$ORIGIN/../lib:${DEVROOT}/lib
         )
 
 ExternalProject_Add(
